# nac-sanitizer

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
docs/: configuration.md  development.md  ip_sanitization.md  overview.md  profiles.md  rosetta_stone.md
nac_sanitizer/: __init__.py  __main__.py  constants.py  sanitizer.py  zip_handler.py
nac_sanitizer/cli/: main.py
nac_sanitizer/config/: loader.py  models.py
nac_sanitizer/engine/: __init__.py  ip_allocator.py  ip_scanner.py  resolver.py  strategies.py
nac_sanitizer/profiles/: registry.py
nac_sanitizer/resources/profiles/: catalyst_center.yaml  fmc.yaml  ise.yaml  sdwan.yaml
nac_sanitizer/rosetta/: writer.py
scripts/: bench_ip_allocator.py  license-headers.sh
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_config_loader.py  test_ip_allocator.py  test_ip_allocator_edge_cases.py  test_ip_scanner.py  test_profiles.py  test_resolver.py  test_rosetta_writer.py  test_sanitizer.py  test_strategies.py  test_version.py  test_zip_handler.py
