[project]
name = "nac-sanitizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
